--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<p>03/13</p>
 	<ul>
 		<li>Project Analysis</li>
-		<li>Style Tile<li>
+		<li><a href="http://parispizarro.github.io/wspclass/lab-activities/styletile/index.html">Style Tile</a></li>
 	</ul>
 </body>
 </html>
