--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<ul>
 		<li>Project Analysis</li>
 		<li><a href="http://parispizarro.github.io/wspclass/lab-activities/styletile/index.html">Style Tile</a></li>
+		<li><a href="Sign Composites"</li>
 	</ul>
 </body>
 </html>
