--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<ul>
 		<li>Project Analysis</li>
 		<li><a href="http://parispizarro.github.io/wspclass/lab-activities/styletile/index.html">Style Tile</a></li>
-		<li><a href="Sign Composites"</li>
+		<li><a href="Design Composites">Design Composites</a></li>
 	</ul>
 </body>
 </html>
